add zendeskTicketSubjects function to GoogleOauth service

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
 <h1>WUD UP</h1>
-<h2 ng-repeat="subject in home.ticketSubject">
+<h2 ng-repeat="subject in home.listSubjects.tickets">
   {{ subject }}
 </h2>
