home template updates

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,5 @@
 <h1>WUD UP</h1>
+<h2>Hello, {{ home.user.userObject["name"] }}</h2>
 <h2 ng-repeat="subject in home.listSubjects.tickets">
-  {{ subject }}
+  {{ subject["subject"] }}
 </h2>
