--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
 <h1>Hello, {{ home.user.userObject["name"] }}</h1>
-<h2 ng-repeat="ticket in home.listSubjects.tickets">
+<h2 ng-repeat="ticket in home.listSubjects">
   {{ ticket["subject"] }}
 </h2>
