--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,3 +1,4 @@
+<a href="" ng-click="home.signOut();">Sign out</a>
 <h1>Hello, {{ home.user.userObject["name"] }}</h1>
 <h2 ng-repeat="ticket in home.listSubjects">
   {{ ticket["subject"] }}
