--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -1,9 +1,6 @@
 <h1 ng-repeat='ticket in ticket.ZenFactory.ticket'> {{ ticket["subject"] }}</h1>
 <h1> {{ ticket.ZenFactory.ticket["subject"] }} </h1>
 
-<div ng-repeat="commentArray in ticket.ZenFactory.comment">
-  <h4 ng-repeat="commentObject in commentArray">
-    {{ commentObject.body }}
-    {{ commentObject.via.source.from.name }}
-  </h4>
+<div ng-repeat="commentArray in ticket.ZenFactory.ticket">
+  <h4> {{ commentArray.body }} {{ commentArray.sender }}</h4>
 </div>
