begin createTicket function, create template + controller

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,6 @@
 <a href="" ng-click="home.signOut();">Sign out</a>
 <h1>Hello, {{ home.user.userObject["name"] }}</h1>
+  <a ui-sref="newTicket">Create Ticket</a>
 <div ng-repeat="ticket in home.ZenFactory.tickets">
     <a ui-sref="ticket" ng-click="home.passTicketId(ticket.id)">
       <h4>{{ ticket.subject }}</h4>
