--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -4,3 +4,16 @@
 <div ng-repeat="commentArray in ticket.ZenFactory.ticket">
   <h4> {{ commentArray.body }} {{ commentArray.sender }}</h4>
 </div>
+
+<form>
+  <div class="form-group">
+    <h2>Update Ticket</h2>
+    <label>Email</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" ng-model="ticket.userEmail" placeholder="Enter your email address">
+  </div>
+  <div class="form-group">
+    <label>Comment Body</label>
+    <textarea class="form-control" id="exampleTextarea" rows="10" ng-model="ticket.commentBody"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary" ng-click="ticket.createComment()">Submit</button>
+</form>
