--- a/app/templates/newTicket.html
+++ b/app/templates/newTicket.html
@@ -1,10 +1,11 @@
+<h2>Create Ticket</h2>
 <form>
   <div class="form-group">
-    <label>Name</label>
+    <label>Email Address</label>
     <input type="text" class="form-control" id="exampleInputEmail1" ng-model="newTicket.submitter" placeholder="Enter your email address">
   </div>
   <div class="form-group">
-    <label>Ticket Title</label>
+    <label>Ticket Subject</label>
     <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter title of your ticket" ng-model="newTicket.subject">
   </div>
   <div class="form-group">
