--- a/app/templates/newTicket.html
+++ b/app/templates/newTicket.html
@@ -2,7 +2,7 @@
 <form>
   <div class="form-group">
     <label>Email Address</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" ng-model="newTicket.submitter" placeholder="Enter your email address">
+    <input type="text" class="form-control" id="exampleInputEmail1" ng-model="newTicket.submitter">
   </div>
   <div class="form-group">
     <label>Ticket Subject</label>
