--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -14,7 +14,7 @@
   <div class="form-group">
     <h3 class="update-ticket">Update Ticket</h3>
     <label>Email</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" ng-model="ticket.userEmail" placeholder="Enter your email address">
+    <input type="text" class="form-control" id="exampleInputEmail1" ng-model="ticket.userEmail">
   </div>
   <div class="form-group">
     <label>Comment Body</label>
