--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -22,3 +22,4 @@
   </div>
   <button type="submit" class="btn btn-primary" ng-click="ticket.createComment()">Submit</button>
 </form>
+<div class="bottom-space"></div>
