update new ticket submitter name to user's name instead of email

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,7 +40,13 @@
       </td>
     </tr>
   </tbody>
-  
+
 
 </table>
+<div>
+  *Ticket Status key:
+  Open - Support is investigating and will follow-up with an update 
+  Pending - Waiting on response from CSM OR Support waiting on response from Product/Engineering
+  On-hold - Engineering is in progress of investigating/solving
+</div>
 <div class="bottom-space"></div>
