add ticket status key to open tickets page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -43,10 +43,27 @@
 
 
 </table>
-<div>
-  *Ticket Status key:
-  Open - Support is investigating and will follow-up with an update 
-  Pending - Waiting on response from CSM OR Support waiting on response from Product/Engineering
-  On-hold - Engineering is in progress of investigating/solving
-</div>
+  <h3>*Ticket Status key</h3>
+  <table class="table table-bordered table-striped">
+    <th>
+      Open
+    </th>
+    <th>
+      Pending
+    </th>
+    <th>
+      Hold
+    </th>
+    <tr>
+      <td>
+        Support is investigating and will follow-up with an update
+      </td>
+      <td>
+        Waiting on response from CSM <strong>OR</strong> Support waiting on response from Product/Engineering
+      </td>
+      <td>
+        Engineering is in progress of investigating/resolving
+      </td>
+    </tr>
+  </table>
 <div class="bottom-space"></div>
