--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -139,7 +139,7 @@ h2 {
   white-space: -moz-pre-wrap;
   white-space: -pre-wrap;
   white-space: -o-pre-wrap;
-  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .ticket-page-title {
