--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -2,6 +2,7 @@
   <strong>Well done!</strong> The ticket has been updated.
 </div>
 <h1 class="ticket-page-title"> {{ ticket.ticketSubject }} </h1>
+<h1 ng-if="ticket.loading">Loading...</h1>
 <div class="card">
   <div class="card-block" ng-repeat="commentArray in ticket.ZenFactory.ticket">
     <h4 class="card-title">Sender: {{ commentArray.sender }} <br /> {{ commentArray.created_at | date:'mediumDate'}}</h4>
