recently closed tickets hidden from unauthenticated users, sign in display when not signed in

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -110,6 +110,14 @@ h2 {
   color: #32bf92;
 }
 
+.jumbotron {
+  background: #f9f9f9 !important;
+}
+
+.jumbo-text {
+  margin-left: 7px;
+}
+
 /*ticket.html*/
 
 .card-block:nth-child(odd) {
