--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,7 @@
 <h2>Open Tickets</h2>
+<div class="jumbotron" ng-show="home.userSignedIn()">
+  <h3 class="jumbo-text">Please sign in with Sharethrough email to view tickets</h3>
+</div>
 <table class="table table-bordered table-striped platform-spacing">
   <thead>
     <tr>
@@ -40,7 +43,7 @@
       </td>
     </tr>
   </tbody>
-  
+
 
 </table>
 <div class="bottom-space"></div>
