--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,7 +26,7 @@ h2 {
   height: 100px
 }
 
-/*right bar */
+/*left bar */
 
 .local-nav {
   position: fixed;
@@ -79,6 +79,14 @@ h2 {
   bottom: 0 !important;
 }
 
+.sign-out .abcRioButtonIcon {
+  position: absolute;
+  top: 8px;
+  bottom: 8px;
+  left: 8px;
+  padding: 0 !important;
+}
+
 .abcRioButtonContents {
   margin-right: 29px !important;
 }
@@ -90,6 +98,9 @@ h2 {
   text-align: center;
   height: 36px;
   padding-top: 7px;
+  font-family: Roboto,arial,sans-serif;
+  font-size: 13px;
+  cursor: pointer;
 }
 
 .sign-in-container {
