--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,3 +1,4 @@
+<ng-include src="'/templates/loading.html'" ng-show="home.loading"></ng-include>
 <h2>Open Tickets</h2>
 <table class="table table-bordered table-striped platform-spacing">
   <thead>
