add style loading bar

--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -1,15 +1,14 @@
+<ng-include src="'/templates/loading.html'" ng-show="ticket.loading"></ng-include>
 <div aria-hidden="true" ng-show="ticket.submitted" class="alert alert-success">
-  <strong>Well done!</strong> The ticket has been updated.
+  <strong>The ticket has been updated!</strong>
 </div>
 <h1 class="ticket-page-title"> {{ ticket.ticketSubject }} </h1>
-<h1 ng-if="ticket.loading">Loading...</h1>
 <div class="card">
   <div class="card-block" ng-repeat="commentArray in ticket.ZenFactory.ticket">
     <h4 class="card-title">Sender: {{ commentArray.sender }} <br /> {{ commentArray.created_at | date:'mediumDate'}}</h4>
     <pre class="ticket-body">{{ commentArray.body }}</pre>
   </div>
 </div>
-
 
 <form>
   <div class="form-group">
