add loading display to myTicket and recentlyClosedTickets

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
 
 <ng-include src="'/templates/loading.html'" ng-show="home.loading"></ng-include>
 
-<h2>Open Tickets</h2>
+<h2>Unsolved Tickets</h2>
 <table class="table table-bordered table-striped platform-spacing">
   <thead>
     <tr>
