--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -1,3 +1,4 @@
+<ng-include src="'/templates/loading.html'" ng-show="myTickets.loading"></ng-include>
 <h2>My Tickets</h2>
 <table class="table table-bordered table-striped platform-spacing">
   <thead>
