--- a/app/templates/closedTickets.html
+++ b/app/templates/closedTickets.html
@@ -1,3 +1,4 @@
+<ng-include src="'/templates/loading.html'" ng-show="closedTickets.loading"></ng-include>
 <h2>Closed Tickets (Past Two Weeks)</h2>
 <table class="table table-bordered table-striped platform-spacing">
   <thead>
