fix sign-in issue, begin sorting feature

--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -3,7 +3,7 @@
 <table class="table table-bordered table-striped platform-spacing">
   <thead>
     <tr>
-      <th>
+      <th ng-click="myTickets.sortByTitle()">
         Title
       </th>
       <th>
