descending sort icon added after click

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,9 +22,25 @@ h2 {
   margin: 40px 0 !important;
 }
 
+th {
+  cursor: pointer;
+}
+
 .bottom-space {
   height: 100px
 }
+
+.carat {
+  display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    vertical-align: middle;
+    border-top: 4px dashed;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+}
+
 
 /*left bar */
 
