--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -4,7 +4,8 @@
   <thead>
     <tr>
       <th ng-click="myTickets.sortByTitle()">
-        Title
+          Title
+        <span class="carat" ng-show="myTickets.sort"</span>
       </th>
       <th>
         Date Submitted
