toggle between asc and desc sorting

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,6 +41,11 @@ th {
     border-left: 4px solid transparent;
 }
 
+.desc-carat.carat{
+  border-top: 0;
+  border-bottom: 4px dashed;
+}
+
 
 /*left bar */
 
