--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -5,7 +5,7 @@
     <tr>
       <th ng-click="myTickets.sortByTitle()">
           Title
-        <span class="carat" ng-show="myTickets.sort"</span>
+        <span class="carat" ng-show="myTickets.sort"></span>
       </th>
       <th>
         Date Submitted
