toggle sorting carat icons on view

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,13 +30,24 @@ th {
   height: 100px
 }
 
-.carat {
+.up-carat {
   display: inline-block;
     width: 0;
     height: 0;
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+}
+
+.down-carat {
+  display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    vertical-align: middle;
+    border-bottom: 4px dashed;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
 }
