--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -5,7 +5,8 @@
     <tr>
       <th ng-click="myTickets.sortByTitle()">
           Title
-        <span class="carat" ng-show="myTickets.sort"></span>
+        <span class="up-carat" ng-show="myTickets.ascSort"></span>
+        <span class="down-carat" ng-show="myTickets.descSort"></span>
       </th>
       <th>
         Date Submitted
