set loading screen to fix position

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -213,7 +213,7 @@ display: none;
 /*loading spinner*/
 
 .loading-display {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   width: 100%;
   top: 0px;
