--- a/app/templates/closedTickets.html
+++ b/app/templates/closedTickets.html
@@ -27,6 +27,7 @@
         <a ui-sref="ticket" ng-click="closedTickets.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
             {{ ticket.subject }}
           </a>
+          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning btn-incident" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, closedTickets.ZenFactory.closedTickets);">This ticket has incidents</button>
       </td>
       <td>
         {{ ticket.username }}
